--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-poppins: var(--font-poppins);
+  --font-sfpro: var(--font-sfpro);
 }
 
 @media (prefers-color-scheme: dark) {
